# pretalx-social-auth

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh  pretalx.cfg.template
.github/workflows/: cd.yml  style.yml
pretalx_social_auth/: strategy.py  views.py
pretalx_social_auth/templates/pretalx_social_auth/: profile_settings.html  settings.html
pretalx_sso/: __init__.py  apps.py  forms.py  managers.py  models.py  pipeline.py  signals.py  storage.py  strategy.py  urls.py  utils.py  views.py
pretalx_sso/management/commands/: clearsocial.py
pretalx_sso/migrations/: 0001_initial.py  0002_partial_association_code_nonce_usersocialauth.py
pretalx_sso/templates/pretalx_sso/: login.html  profile_settings.html  settings.html
