[project]
name = "pretalx-social-auth"
dynamic = ["version"]
description = "Single sign-on for pretalx using based on social-auth-app-django"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["pretalx"]
authors = [
  {name = "Tjark"},
]
maintainers = []

dependencies = [
  "django>=3.2",
  "social-auth-core>=4.4.1"
]

[project.urls]
homepage = "https://github.com/adamskrz/pretalx-social-auth"
repository = "https://github.com/adamskrz/pretalx-social-auth.git"

[project.entry-points."pretalx.plugin"]
pretalx_social_auth = "pretalx_social_auth:PretalxPluginMeta"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretalx_social_auth.__version__"}

[tool.setuptools.packages.find]
include = ["pretalx*"]

[tool.check-manifest]
ignore = [".*"]
