[project]
name = "pretalx-sso"
dynamic = ["version"]
description = "Single sign-on for pretalx based on social-auth-app-django"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["pretalx"]
authors = [
  {name = "Tjark"},
]
maintainers = []

dependencies = [ 
  "django>=3.2",
  "social-auth-core>=4.4.1"
]

[project.urls]
homepage = "https://github.com/tjarbo/pretalx-single-sign-on"
repository = "https://github.com/tjarbo/pretalx-single-sign-on.git"

[project.entry-points."pretalx.plugin"]
pretalx_sso = "pretalx_sso:PretalxPluginMeta"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretalx_sso.__version__"}

[tool.setuptools.packages.find]
include = ["pretalx*"]

[tool.check-manifest]
ignore = [".*"]
